package com.example.delivery_food_back_end.business;

public enum UserType
{
    CUSTOMER,
    ADMIN,
    EMPLOYEE
}
